# blueos-foxglove

./: CompressedVideo.msg  Dockerfile  README.md  pyproject.toml
src/: main.py
src/fox/: bridge.py  posehandler.py
src/html/: extension.json  index.html
src/web/: server.py
src/web/html/: index.html
