[project]
name = "blueos-foxglove"
version = "0.1.0"
description = "MAVLink to Foxglove bridge"
requires-python = ">=3.9"
dependencies = [
    "foxglove-websocket==0.1.0",
    "foxglove-sdk==0.9.0",
    "eclipse-zenoh==1.4.0",
    "asyncio==3.4.3",
    "aiohttp==3.12.13",
    "genson==1.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]